refactor(api): ♻️ 重构集群用户租户关系服务与数据访问层
将SQL查询逻辑从服务层迁移至DAO层，优化代码结构
- 在ClusterUserTenantMapper中新增查询和删除方法
- 修改ClusterUserTenantServiceImpl使用新的DAO方法
- 调整服务接口返回类型，移除Result包装类
- 新增ClusterTenantMapper查询方法支持批量查询

Signed-off-by: 任相鹏 <renxiangpeng@norinaviation.com>